# cpp-sdk

./: CMakeLists.txt  README.md
docs/: API_RECORDS.md  API_RULES_AND_FILTERS.md  AUTHENTICATION.md  COLLECTIONS.md  COLLECTION_API.md  FILES.md  FILE_API.md  HEALTH_API.md  REALTIME.md  RELATIONS.md
include/bosbase/: auth_store.h  bosbase.h  client.h  error.h  request.h  types.h  utils.h
include/bosbase/services/: backup.h  base.h  batch.h  cache.h  collection.h  cron.h  file.h  graphql.h  health.h  langchaingo.h  llm_document.h  log.h  pubsub.h  realtime.h  record.h  settings.h  sql.h  vector.h
src/: auth_store.cpp  base_service.cpp  client.cpp  pubsub.cpp  realtime.cpp  record_service.cpp
